--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accidentes</title>
-</head>
-<body>
-  <app-top-sdenav></app-top-sdenav>
-  <h1>Venta principal</h1>
-  <app-login></app-login>
-  
-</body>
-</html>
+<router-outlet></router-outlet>
+
+<h1>Hola mundo</h1>
