Las graficas fueron añadidas falta enlazarlas con data base

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,1 +1,2 @@
-<p>feed works!</p>
+<h1>Hola Feed</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias distinctio temporibus vel. Molestiae veritatis dolorem natus ducimus, deleniti dolor labore nam laudantium autem aliquid ipsum enim asperiores. Adipisci, repellat placeat.</p>
