--- a/src/app/graficas/graficas.component.html
+++ b/src/app/graficas/graficas.component.html
@@ -73,7 +73,7 @@
 
             <h5 class=" card-category"></h5>
             <h3 class=" card-title">
-              <i class=" tim-icons icon-bell-55 text-danger-states"> </i> Tasa De Mortalidad 2010-2014
+              <i class=" tim-icons icon-bell-55 text-danger-states"> </i> Tasa De Mortalidad 2014
             </h3>
           </div>
           <div class=" card-body">
