--- a/src/app/top-sdenav/top-sdenav.component.css
+++ b/src/app/top-sdenav/top-sdenav.component.css
@@ -37,10 +37,6 @@ div{
    color: blanchedalmond;
    margin-left: 1100px; 
  }
-
-
-
-
      
   .mat-sidenav{
     width: 20%;
@@ -70,4 +66,21 @@ div{
        `<body>` to be our scrolling element for mobile layouts. */
     flex: 1 0 auto;
   }
+
+
+
+  html,
+body {
+  height: 20%;
+}
+#page-content {
+  flex: 1 0 auto;
+}
+#sticky-footer {
+  flex-shrink: none;
+}
+body {
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
+}
   
