--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,7 +1,20 @@
-<!--Google map-->
+<!--Google map
 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127343.4845269646!2d-73.67910065664888!3d4.12475442870638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3e2ddfba283211%3A0x537e40041d7b20c2!2sVillavicencio%2C%20Meta!5e0!3m2!1ses!2sco!4v1589230240227!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
      
-  </div>
+  </div>-
+  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>-->
+
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
+      <agm-marker *ngFor="let location of locations" 
+      [latitude]="location.lat" 
+      [longitude]="location.lng"
+      [iconUrl]='icon'
+      [label]="labelOptions"
+      ></agm-marker><!-- multiple markers -->
+</agm-map>
+
   
   <!--Google Maps-->
