--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,19 +2,62 @@
 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127343.4845269646!2d-73.67910065664888!3d4.12475442870638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3e2ddfba283211%3A0x537e40041d7b20c2!2sVillavicencio%2C%20Meta!5e0!3m2!1ses!2sco!4v1589230240227!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
      
-  </div>-
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map>-->
-
+  </div>-->
 <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
-      <agm-marker *ngFor="let location of locations" 
+  <div  *ngFor="let location of locations; let i = index">
+    <div *ngIf="location.tipo=='carro'">
+    <agm-marker 
       [latitude]="location.lat" 
       [longitude]="location.lng"
-      [iconUrl]='icon'
+      [iconUrl]='icon1'
       [label]="labelOptions"
-      ></agm-marker><!-- multiple markers -->
-</agm-map>
+      (markerClick)="clickedMarker(location.tipo, i)">
 
-  
-  <!--Google Maps-->
+      <agm-info-window [disableAutoPan]="false" #infoWindow>
+        <div  style="width: 18rem;">
+          <img [src]="location.img" class="rounded float-left" width="30%" style="margin-right: 10px;">
+            <p><b>Accidente de {{location.tipo}}</b></p>
+            <p>Información del tweet</p>
+        </div>
+
+      </agm-info-window>
+
+    </agm-marker><!-- multiple markers -->
+    </div>
+    <div *ngIf="location.tipo=='moto'">
+      <agm-marker 
+        [latitude]="location.lat" 
+        [longitude]="location.lng"
+        [iconUrl]='icon2'
+        [label]="labelOptions"
+        (markerClick)="clickedMarker(location.tipo, i)">
+
+        <agm-info-window [disableAutoPan]="false" #infoWindow>
+          <div  style="width: 18rem;">
+            <img [src]="location.img" class="rounded float-left" width="30%" style="margin-right: 10px;">
+              <p><b>Accidente de {{location.tipo}}</b></p>
+              <p>Información del tweet</p>
+          </div>
+
+        </agm-info-window>
+
+      </agm-marker><!-- multiple markers -->
+    </div>
+    
+  </div>
+</agm-map><!--Google Maps-->
+<div *ngIf="show" class="info-tweets">
+      <!--{{buttonName}}-->
+      <div class="row" >
+        <div class="col-sm-3 tweets" *ngFor="let tweet of tweets; let i = index">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{tweet.titulo}}</h5>
+              <p class="card-text">{{tweet.texto}}</p>
+              <a [href]="" class="btn btn-primary">Ver</a>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+
